fix styling for the favorite and comment buttons; force quote content and buttons to be same height; align voting arrows to be vertically centered;

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -34,9 +34,20 @@
         max-height: 58px;
     	min-height:20px;
     }
+    .author-name {
+        text-align: right;
+    }
 }
 .quote-buttons {
     padding: 0px;
+    .btn-group {
+        height: 100%;
+        width: 100%;
+    }
+    .btn {
+        height: 100%;
+        width: 50%;
+    }
 }
 
 .vote {
@@ -45,4 +56,53 @@
         margin-top: 5px;
         margin-bottom: 5px;
     }
+}
+
+.row-full-height {
+  height: 100%;
+}
+.col-full-height {
+  height: 100%;
+  vertical-align: middle;
+}
+.row-same-height {
+  display: table;
+  width: 100%;
+  /* fix overflow */
+  table-layout: fixed;
+}
+.col-xs-height {
+  display: table-cell;
+  float: none !important;
+}
+
+@media (min-width: 768px) {
+  .col-sm-height {
+    display: table-cell;
+    float: none !important;
+  }
+}
+@media (min-width: 992px) {
+  .col-md-height {
+    display: table-cell;
+    float: none !important;
+  }
+}
+@media (min-width: 1200px) {
+  .col-lg-height {
+    display: table-cell;
+    float: none !important;
+  }
+}
+
+/* vertical alignment styles */
+
+.col-top {
+  vertical-align: top;
+}
+.col-middle {
+  vertical-align: middle;
+}
+.col-bottom {
+  vertical-align: bottom;
 }
